# django_template

./: .dockerignore  .env.example  .gitignore  .makemessagesignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  README2.md  Taskfile.gitflow.yml  Taskfile.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  init-setup.md  manage.py  pyproject.toml  versions.json
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: ci.yml
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/0-quickstart/0-prerequisites/: index.html
0.6.0/0-quickstart/1-getting-started/: index.html
0.6.0/1-architecture/0-overview/: index.html
0.6.0/2-project/0-topic1/: index.html
0.6.0/2-project/1-topic2/: index.html
0.6.0/2-project/2-topic3/: index.html
0.6.0/2-project/uv-notes/: index.html
0.6.0/3-troubleshooting/0-overview/: index.html
0.6.0/3-troubleshooting/1-problem1/: index.html
0.6.0/3-troubleshooting/2-problem2/: index.html
0.6.0/4-about/0-about/: index.html
0.6.0/disclaimer/: index.html
0.6.1/: 404.html  index.html  sitemap.xml
0.6.1/0-quickstart/0-prerequisites/: index.html
0.6.1/0-quickstart/1-getting-started/: index.html
0.6.1/1-architecture/0-overview/: index.html
0.6.1/2-project/0-topic1/: index.html
0.6.1/2-project/1-topic2/: index.html
0.6.1/2-project/2-topic3/: index.html
0.6.1/2-project/uv-notes/: index.html
0.6.1/3-troubleshooting/0-overview/: index.html
0.6.1/3-troubleshooting/1-problem1/: index.html
0.6.1/3-troubleshooting/2-problem2/: index.html
0.6.1/4-about/0-about/: index.html
0.6.1/disclaimer/: index.html
0.6.10/: 404.html  index.html  sitemap.xml
0.6.10/0-quickstart/0-prerequisites/: index.html
0.6.10/0-quickstart/1-getting-started/: index.html
0.6.10/1-architecture/0-overview/: index.html
0.6.10/2-project/1-topic2/: index.html
0.6.10/2-project/2-topic3/: index.html
0.6.10/2-project/notes/: index.html
0.6.10/2-project/setup/: index.html
0.6.10/2-project/uv-notes/: index.html
0.6.10/3-troubleshooting/0-overview/: index.html
0.6.10/3-troubleshooting/1-problem1/: index.html
0.6.10/3-troubleshooting/2-problem2/: index.html
0.6.10/4-about/0-about/: index.html
0.6.10/disclaimer/: index.html
0.6.10/search/: search_index.json
0.6.2/: 404.html  index.html  sitemap.xml
0.6.2/0-quickstart/0-prerequisites/: index.html
0.6.2/0-quickstart/1-getting-started/: index.html
0.6.2/1-architecture/0-overview/: index.html
0.6.2/2-project/0-topic1/: index.html
0.6.2/2-project/1-topic2/: index.html
0.6.2/2-project/2-topic3/: index.html
0.6.2/2-project/uv-notes/: index.html
0.6.2/3-troubleshooting/0-overview/: index.html
0.6.2/3-troubleshooting/1-problem1/: index.html
0.6.2/3-troubleshooting/2-problem2/: index.html
0.6.2/4-about/0-about/: index.html
0.6.2/disclaimer/: index.html
0.6.3/: 404.html  index.html  sitemap.xml
0.6.3/0-quickstart/0-prerequisites/: index.html
0.6.3/disclaimer/: index.html
0.6.4/: 404.html  index.html  sitemap.xml
0.6.4/disclaimer/: index.html
0.6.5/: 404.html  index.html  sitemap.xml
0.6.5/disclaimer/: index.html
0.6.6/: 404.html  index.html  sitemap.xml
0.6.6/disclaimer/: index.html
0.6.6/search/: search_index.json
0.6.7/: 404.html  index.html  sitemap.xml
0.6.7/disclaimer/: index.html
0.6.8/: 404.html  index.html  sitemap.xml
0.6.8/disclaimer/: index.html
0.6.8/search/: search_index.json
0.6.9/: 404.html  index.html  sitemap.xml
0.6.9/disclaimer/: index.html
0.6.9/search/: search_index.json
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/disclaimer/: index.html
0.7.0/search/: search_index.json
0.7.1/: 404.html  index.html  sitemap.xml
0.7.1/disclaimer/: index.html
0.7.2/: 404.html  index.html  sitemap.xml
0.7.2/disclaimer/: index.html
0.7.3/: 404.html  index.html  sitemap.xml
0.7.3/disclaimer/: index.html
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/disclaimer/: index.html
0.8.1/: 404.html  index.html  sitemap.xml
0.8.1/disclaimer/: index.html
0.8.2/: 404.html  index.html  sitemap.xml
0.8.2/disclaimer/: index.html
0.8.3/: 404.html  index.html  sitemap.xml
0.8.3/disclaimer/: index.html
0.8.3/search/: search_index.json
CHANGELOG/: README.md  changelog-0.7.0.md  changelog-0.8.0.md  changelog-template.md
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_template/: admin_config.py  conftest.py
django_template/templates/: base.html
django_template/users/: adapters.py  admin.py  apps.py  models.py  views.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
latest/: 404.html  index.html
latest/disclaimer/: index.html
mkdocs_docs/: mkdocs.yml
mkdocs_docs/docs/: disclaimer.md  index.md
(+323 files in other folders)
